# SentineMonitor

./: .gitignore  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  FileScanner.cpp  FileScanner.cpp.autosave  FileScanner.h  README.md  main.cpp
